--- a/Angular2-Seed.csproj
+++ b/Angular2-Seed.csproj
@@ -41,7 +41,6 @@
     <Content Include="index.html" />
     <Content Include="karma.conf.js" />
     <Content Include="protractor.conf.js" />
-    <Content Include="src\app\app.component.css" />
     <Content Include="src\app\components\masterpage\footer\footer.component.html" />
     <Content Include="src\app\components\masterpage\header\header.component.html" />
     <Content Include="src\app\components\masterpage\layout-main\layout-main.component.html" />
@@ -176,6 +175,11 @@
     <None Include="web.Release.config">
       <DependentUpon>web.config</DependentUpon>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="src\app\components\ui\buttons\" />
+    <Folder Include="src\app\components\ui\forms\" />
+    <Folder Include="src\app\components\ui\modals\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">12.0</VisualStudioVersion>
