Added service with cached observables

--- a/Angular2-Seed.csproj
+++ b/Angular2-Seed.csproj
@@ -45,6 +45,7 @@
     <Content Include="src\app\components\masterpage\layout-main\layout-main.component.html" />
     <Content Include="src\app\components\masterpage\nav-main\nav-main.component.html" />
     <Content Include="src\app\components\routes\home\home.component.html" />
+    <Content Include="src\app\components\routes\scaffolding\scaffolding.component.html" />
     <Content Include="src\assets\fonts\fontawesome\fontawesome-webfont.svg" />
     <Content Include="src\assets\humans.txt" />
     <Content Include="src\assets\icon\android-icon-144x144.png" />
@@ -106,10 +107,12 @@
     <TypeScriptCompile Include="src\app\components\routes\home\index.ts" />
     <TypeScriptCompile Include="src\app\components\routes\no-content\index.ts" />
     <TypeScriptCompile Include="src\app\components\routes\no-content\no-content.component.ts" />
+    <TypeScriptCompile Include="src\app\components\routes\scaffolding\index.ts" />
+    <TypeScriptCompile Include="src\app\components\routes\scaffolding\scaffolding.component.ts" />
     <TypeScriptCompile Include="src\app\environment.ts" />
     <TypeScriptCompile Include="src\app\index.ts" />
-    <TypeScriptCompile Include="src\app\models\models.d.ts" />
     <TypeScriptCompile Include="src\app\services\borrower.service.ts" />
+    <TypeScriptCompile Include="src\app\services\user.service.ts" />
     <TypeScriptCompile Include="src\custom-typings.d.ts" />
     <TypeScriptCompile Include="src\main.browser.aot.ts" />
     <TypeScriptCompile Include="src\main.browser.ts" />
@@ -132,17 +135,17 @@
     <Content Include="src\assets\css\.gitkeep" />
     <Content Include="src\assets\data.json" />
     <Content Include="src\assets\manifest.json" />
-    <Content Include="src\assets\mock-data\mock-data.json" />
+    <Content Include="src\app\mock-data\mock-data.json" />
     <Content Include="src\styles\styles.scss" />
     <Content Include="src\app\components\masterpage\layout-main\layout-main.component.scss" />
-    <Content Include="src\app\models\GetBCDInfo.json" />
-    <Content Include="src\app\models\GetBorrowersForLoan.json" />
-    <Content Include="src\app\models\getBorrowerStatusForLoan.json" />
-    <Content Include="src\app\models\GetDocumentListForLoan.json" />
-    <Content Include="src\app\models\getMessagesForLoan.json" />
-    <Content Include="src\app\models\GetNextFromAccuracyQueue.json" />
-    <Content Include="src\app\models\GetNextFromQualifyQueue.json" />
-    <Content Include="src\app\models\GetUserProfile.json" />
+    <Content Include="src\app\mock-data\GetBCDInfo.json" />
+    <Content Include="src\app\mock-data\GetBorrowersForLoan.json" />
+    <Content Include="src\app\mock-data\getBorrowerStatusForLoan.json" />
+    <Content Include="src\app\mock-data\GetDocumentListForLoan.json" />
+    <Content Include="src\app\mock-data\getMessagesForLoan.json" />
+    <Content Include="src\app\mock-data\GetNextFromAccuracyQueue.json" />
+    <Content Include="src\app\mock-data\GetNextFromQualifyQueue.json" />
+    <Content Include="src\app\mock-data\GetUserProfile.json" />
     <Content Include="src\styles\globals\_animation.scss" />
     <Content Include="src\styles\globals\_components.scss" />
     <Content Include="src\styles\globals\_forms.scss" />
